[project]
name = "pollstats"
version = "0.0.1"
authors = [
  { name="Vijayanand", email="x22147802@student.ncirl.ie" },
]
description = "pollstats is a simple package to display numbers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/x22147802/pollstats"
"Bug Tracker" = "https://github.com/x22147802/pollstats/issues"
