[project]
name = "pollstats"
version = "0.0.1"
authors = [
  { name="Vijayanand", email="vijayanand563@gmail.com" },
]
description = "pollstats is a simple package to display numbers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Vijayanand-debug/pollstats"
"Bug Tracker" = "https://github.com/Vijayanand-debug/pollstats/issues"
